--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html>
-	<head>
-	</head>
-	<body style="margin:0;padding:0">
-		<header style="color:#FF0000;height:70px;width:100%">
-		</header>
-		<footer style="color:#00FF00;height:60px;width:100%;text-align:center">
-			Best School
-		</footer>
-	</body>
+  <head> </head>
+  <body style="margin: 0; padding: 0">
+    <header
+      style="background-color: #ff0000; height: 70px; width: 100%"
+    ></header>
+    <footer
+      style="
+        position: absolute;
+        background-color: #00ff00;
+        height: 60px;
+        width: 100%;
+        text-align: center;
+        bottom: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      "
+    >
+      <p>Best School</p>
+    </footer>
+  </body>
 </html>
