--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head> </head>
-  <body style="margin: 0; padding: 0">
-    <header
-      style="background-color: #ff0000; height: 70px; width: 100%"
-    ></header>
-    <footer
-      style="
-        position: absolute;
-        background-color: #00ff00;
-        height: 60px;
-        width: 100%;
-        text-align: center;
-        bottom: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      "
-    >
-      <p>Best School</p>
-    </footer>
-  </body>
+	<head>
+	</head>
+	<body style="margin: 0; padding: 0">
+		<header
+			style="background-color: #ff0000; height: 70px; width: 100%"
+			></header>
+		<footer
+		style="
+		       position: absolute;
+		       background-color: #00ff00;
+		       height: 60px;
+		       width: 100%;
+		       text-align: center;
+		       bottom: 0;
+		       display: flex;
+		       justify-content: center;
+		       align-items: center;
+		       "
+		       >
+		       <p>Best School</p>
+		</footer>
+	</body>
 </html>
