adding the indexes

--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" href="./styles/4-common.css">
-		<link rel="stylesheet" href="./styles/3-header.css">
-		<link rel="stylesheet" href="./styles/4-filters.css">
-		<link rel="stylesheet" href="./styles/3-footer.css">
-		<link rel="icon" href="./images/icon.png" type="images/png">
-	</head>
-	<body>
-		<header>
-		</header>
-		<div class="container">
-			<section class="filters">
-				<button>
-					Search
-				</button>
-			</section>
-		</div>
-		<footer>
-		       <p>Best School</p>
-		</footer>
-	</body>
+        <head>
+                <link rel="stylesheet" href="./styles/4-common.css" />
+                <link rel="stylesheet" href="./styles/3-header.css" />
+                <link rel="stylesheet" href="./styles/4-filters.css" />
+                <link rel="stylesheet" href="./styles/3-footer.css" />
+                <link rel="icon" href="./images/icon.png" type="image/png" />
+        </head>
+        <body>
+                <!--Start Header-->
+                <header></header>
+                <!--End Header-->
+
+                <!--Start Container-->
+                <div class="container">
+                        <!--- Start Filters -->
+                        <section class="filters">
+                                <!--Start Button-->
+                                <button>Search</button>
+                                <!--End Button-->
+                        </section>
+                        <!-- End Filters -->
+                </div>
+                <!--End Container-->
+
+                <!--Start Footer-->
+                <footer>Best School</footer>
+                <!--End Footer-->
+        </body>
 </html>
