--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" href="./styles/2-common.css">
-		<link rel="stylesheet" href="./styles/2-header.css">
-		<link rel="stylesheet" href="./styles/2-footer.css">
-	</head>
-	<body>
-		<header></header>
-		<footer>
-		       <p>Best School</p>
-		</footer>
-	</body>
+        <head>
+                <link rel="stylesheet" href="./styles/2-common.css">
+                <link rel="stylesheet" href="./styles/2-header.css">
+                <link rel="stylesheet" href="./styles/2-footer.css">
+        </head>
+        <body>
+                <!--Start Header-->
+                <header></header>
+                <!--End Header-->
+
+                <!--Start Footer-->
+                <footer>
+                        Best School
+                </footer>
+                <!--End Footer-->
+        </body>
 </html>
