--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" href="./styles/3-common.css">
-		<link rel="stylesheet" href="./styles/3-header.css">
-		<link rel="stylesheet" href="./styles/3-footer.css">
-		<link rel="icon" href="./images/icon.png" type="images/png">
-	</head>
-	<body>
-		<header>
-			<div class="logo">
-			</div>
-		</header>
-		<footer>
-		       <p>Best School</p>
-		</footer>
-	</body>
+        <head>
+                <link rel="stylesheet" href="./styles/3-common.css" />
+                <link rel="stylesheet" href="./styles/3-header.css" />
+                <link rel="stylesheet" href="./styles/3-footer.css" />
+                <link rel="icon" href="./images/icon.png" type="image/png" />
+        </head>
+        <body>
+                <!--Start Header-->
+                <header></header>
+                <!--End Header-->
+
+                <!--Start Footer-->
+                <footer>Best School</footer>
+                <!--End Footer-->
+        </body>
 </html>
