--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -1,83 +1,91 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" href="./styles/4-common.css">
-		<link rel="stylesheet" href="./styles/3-header.css">
-		<link rel="stylesheet" href="./styles/6-filters.css">
-		<link rel="stylesheet" href="./styles/7-places.css">
-		<link rel="stylesheet" href="./styles/3-footer.css">
-		<link rel="icon" href="./images/icon.png" type="images/png">
-	</head>
-	<body>
-		<header>
-		</header>
-		<div class="container">
-			<section class="filters">
-				<div class="locations">
+        <head>
+                <link rel="stylesheet" href="./styles/4-common.css" />
+                <link rel="stylesheet" href="./styles/3-header.css" />
+                <link rel="stylesheet" href="./styles/6-filters.css" />
+                <link rel="stylesheet" href="./styles/7-places.css" />
+                <link rel="stylesheet" href="./styles/3-footer.css" />
+                <link rel="icon" href="./images/icon.png" type="image/png" />
+        </head>
+        <body>
+                <!--Start Header-->
+                <header></header>
+                <!--End Header-->
+
+                <!--Start Container-->
+                <div class="container">
+                        <!--- Start Filters -->
+                        <section class="filters">
+                                <!--Start Locations-->
+                                <div class="locations">
                                         <h3>States</h3>
                                         <h4>California, Arizona...</h4>
-					<ul class="popover">
-						<li>
-							<h2>Arizona:</h2>
-							<ul>
-								<li>
-									Page
-								</li>
-								<li>
-                                                                        Page2
-                                                                </li>
-							</ul>
-						</li>
-						<li>
-							<h2>California:</h2>
-							<ul>
+                                        <ul class="popover">
+                                                <li>
+                                                        <h2>Arizona:</h2>
+                                                        <ul>
+                                                                <li>Page</li>
+                                                                <li>Page2</li>
+                                                        </ul>
+                                                </li>
+                                                <li>
+                                                        <h2>California:</h2>
+                                                        <ul>
                                                                 <li>
-                                                                        San Fransisco
+                                                                        San
+                                                                        Fransisco
                                                                 </li>
                                                                 <li>
-                                                                        Los Atlos
+                                                                        Los
+                                                                        Atlos
                                                                 </li>
                                                         </ul>
                                                 </li>
-					</ul>
+                                        </ul>
                                 </div>
+                                <!--End Locations-->
+
+                                <!--Start Amenities -->
                                 <div class="amenities">
                                         <h3>Amenities</h3>
                                         <h4>Internet, Kitchen...</h4>
-					<ul class="popover">
-						<li>
-							Internet
-						</li>
-						<li>
-                                                        TV
-                                                </li>
-						<li>
-                                                        Kitchen
-                                                </li>
-						<li>
-                                                        Iron
-                                                </li>
-					</ul>
+                                        <ul class="popover">
+                                                <li>Internet</li>
+                                                <li>Kitched</li>
+                                                <li>TV</li>
+                                                <li>Iron</li>
+                                        </ul>
                                 </div>
-				<button>
-					Search
-				</button>
-			</section>
-			<section class="places">
-				<h1>Places</h1>
-				<article>
-					<h2>My home</h2>
-				</article>
-				<article>
+                                <!--End Amenities -->
+
+                                <!--Start Button-->
+                                <button>Search</button>
+                                <!--End Button-->
+                        </section>
+                        <!-- End Filters -->
+
+                        <!--Start Places-->
+                        <section class="places">
+                                <h1>Places</h1>
+                                <article>
+                                        <h2>My home</h2>
+                                </article>
+
+                                <article>
                                         <h2>Tiny house</h2>
                                 </article>
-				<article>
+
+                                <article>
                                         <h2>A suite</h2>
                                 </article>
-			</section>
-		</div>
-		<footer>
-		       <p>Best School</p>
-		</footer>
-	</body>
+                        </section>
+                        <!--End Places-->
+                </div>
+                <!--End Container-->
+
+                <!--Start Footer-->
+                <footer>Best School</footer>
+                <!--End Footer-->
+        </body>
 </html>
